# chap

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  chap-dev.py  chap.gif.license  chap.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: codeql.yml  release.yml  test.yml
chap/: __init__.py  __main__.py  key.py  session.py  tui.css  tui.py
src/chap/: __init__.py  __main__.py  core.py  key.py  render.py  session.py  tui.py
src/chap/backends/: anthropic.py  huggingface.py  llama_cpp.py  lorem.py  mistral.py  openai_chatgpt.py  textgen.py
src/chap/commands/: ask.py  cat.py  grep.py  import.py  render.py  tui.css  tui.py
