# SPDX-FileCopyrightText: 2023 Jeff Epler
#
# SPDX-License-Identifier: MIT

[metadata]
name = chap
author = Jeff Epler
author_email = jepler@gmail.com
description = Interact with the OpenAI ChatGPT API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jepler/chap
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = chap
python_requires = >=3.9
[options.entry_points]
console_scripts =
    chap = chap.__main__:main
    chap-cli = chap.commands.cli:main
    chap-tui = chap.commands.tui:main
    chap-render = chap.commands.render:main

[options.package_data]
#chap = py.typed

chap =
    *.css
